[gd_scene load_steps=9 format=3 uid="uid://bonl378c51366"]

[ext_resource type="Script" uid="uid://pcq6svrgye6v" path="res://Scenes/world.gd" id="1_go701"]
[ext_resource type="PackedScene" uid="uid://dgfixe44dvfny" path="res://Scenes/ui_game.tscn" id="2_fo5ed"]
[ext_resource type="Texture2D" uid="uid://b1bonv2ujcxxi" path="res://maps/cultures.png" id="2_go701"]
[ext_resource type="Texture2D" uid="uid://ct2rdn4ldt5ks" path="res://maps/regions.png" id="3_5a7ea"]
[ext_resource type="Script" uid="uid://cvkc8n0kgyk3c" path="res://Scenes/camera_controller.gd" id="4_8j60k"]
[ext_resource type="Script" uid="uid://bko55up7cjg3g" path="res://Scenes/custom_renderer.gd" id="5_o06y3"]
[ext_resource type="Script" uid="uid://dx8iwvng5oypc" path="res://Scripts/troop_selection.gd" id="6_5ukr8"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_8j60k"]

[node name="World" type="Node2D"]
script = ExtResource("1_go701")

[node name="UI_Game" parent="." instance=ExtResource("2_fo5ed")]

[node name="MapContainer" type="Node2D" parent="."]

[node name="CultureSprite" type="Sprite2D" parent="MapContainer"]
material = SubResource("ShaderMaterial_8j60k")
texture = ExtResource("2_go701")
centered = false

[node name="RegionSprite" type="Sprite2D" parent="MapContainer"]
visible = false
texture = ExtResource("3_5a7ea")
centered = false

[node name="CustomRenderer" type="Node2D" parent="MapContainer"]
script = ExtResource("5_o06y3")

[node name="CameraController" type="Node2D" parent="."]
position = Vector2(-1, 1)
script = ExtResource("4_8j60k")

[node name="TroopSelection" type="Node2D" parent="."]
script = ExtResource("6_5ukr8")

[node name="Camera2D" type="Camera2D" parent="."]
anchor_mode = 0
